--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main>
-        <h1>Vai toma no cu</h1>
+        <h1>Vai toma no cu.</h1>
         <div id="circulo">
             <p id="mentira">Mentira</p>
         </div>
